--- a/eshop-admin/pom.xml
+++ b/eshop-admin/pom.xml
@@ -14,6 +14,7 @@
         <dependency>
             <groupId>ru.eshop</groupId>
             <artifactId>shop-database</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
