--- a/eshop-admin/pom.xml
+++ b/eshop-admin/pom.xml
@@ -59,6 +59,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.4.4</version>
+        </dependency>
     </dependencies>
 
     <build>
