--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <liquibase.version>4.3.1</liquibase.version>
         <java.version>11</java.version>
     </properties>
     <build>
