--- a/eshop-admin/src/main/resources/application.properties
+++ b/eshop-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_2
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
