--- a/eshop-admin/pom.xml
+++ b/eshop-admin/pom.xml
@@ -17,6 +17,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>ru.eshop</groupId>
+            <artifactId>picture-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
         </dependency>
