--- a/eshop-backend-api/pom.xml
+++ b/eshop-backend-api/pom.xml
@@ -15,6 +15,16 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>ru.eshop</groupId>
+            <artifactId>shop-database</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.eshop</groupId>
+            <artifactId>picture-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
