--- a/shop-database/src/main/resources/liquibase-maven-plugin.properties
+++ b/shop-database/src/main/resources/liquibase-maven-plugin.properties
@@ -1,8 +1,8 @@
 changeLogFile=db/changelog/db.changelog-master.xml
-url=jdbc:postgresql://localhost:5432/spring_boot_db_2
+url=jdbc:postgresql://localhost:5432/spring_boot_db_4
 username=postgres
 password=postgres
 driver=org.postgresql.Driver
 referenceUrl=hibernate:spring:ru.eshop.database.persist.model?dialect=org.hibernate.dialect.PostgreSQL9Dialect
-diffChangeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
+diffChangeLogFile=src/main/resources/db/changelog/db.changelog-@timestamp@.xml
 ignoreClasspathPrefix=true
