--- a/eshop-backend-api/pom.xml
+++ b/eshop-backend-api/pom.xml
@@ -20,6 +20,14 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ru.eshop</groupId>
             <artifactId>picture-service</artifactId>
             <version>1.0-SNAPSHOT</version>
