--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.4</version>
+        <version>2.5.5</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -21,6 +21,7 @@
         <module>eshop-backend-api</module>
         <module>picture-service</module>
         <module>eshop-database</module>
+        <module>eshop-config-server</module>
     </modules>
 
     <properties>
@@ -28,6 +29,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <liquibase.version>4.3.1</liquibase.version>
         <java.version>11</java.version>
+        <spring-cloud.version>2020.0.4</spring-cloud.version>
     </properties>
     <build>
         <plugins>
@@ -45,4 +47,15 @@
             <version>3.8.1</version>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
