--- a/eshop-config-server/pom.xml
+++ b/eshop-config-server/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -7,7 +7,6 @@
         <groupId>ru.eshop</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>ru.eshop</groupId>
     <artifactId>eshop-config-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eshop-config-server</name>
