--- a/eshop-gateway/pom.xml
+++ b/eshop-gateway/pom.xml
@@ -7,22 +7,36 @@
         <groupId>ru.eshop</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>eshop-eureka</artifactId>
+    <artifactId>eshop-gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eshop-eureka</name>
-    <description>eshop-eureka</description>
+    <name>eshop-gateway</name>
+    <description>eshop-gateway</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
