--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,11 @@ services:
   #  - 3306:3306
   #volumes:
   # - mysql-data:/var/lib/mysql
+  rabbitmq:
+    image: 'bitnami/rabbitmq:latest'
+    ports:
+      - 5672:5672
+      - 15672:15672
 
   redis:
     image: 'bitnami/redis:latest'
