--- a/eshop-config-server/config-repository/backend-dev.properties
+++ b/eshop-config-server/config-repository/backend-dev.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.rabbitmq.username=user
+spring.rabbitmq.password=bitnami
