--- a/eshop-gateway/src/main/resources/application.yaml
+++ b/eshop-gateway/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
           uri: lb://BACKEND
           predicates:
             - Path=/api/v1/**
-        - id: ws
+        - id: backend-ws
           uri: lb:ws://BACKEND
           predicates:
             - Path=/api/v1/**
