Import products without pictures

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>eshop-config-server</module>
         <module>eshop-eureka</module>
         <module>eshop-gateway</module>
+        <module>spring-integration</module>
     </modules>
 
     <properties>
