--- a/spring-integration/src/main/resources/application.properties
+++ b/spring-integration/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.servlet.context-path=/api/v1
-server.port=9092
+source.directory.path=@project.basedir@/source
+dest.directory.path=@project.basedir@/dest
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_4
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
@@ -10,4 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-
+picture.storage.path=/home/netman/IdeaProjects/eshop/storage
