--- a/eshop-config-server/config-repository/delivery-service-ws.properties
+++ b/eshop-config-server/config-repository/delivery-service-ws.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/api/v1
 server.port=9091
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_4
+spring.datasource.url=jdbc:postgresql://db:5432/spring_boot_db_4
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
