--- a/eshop-admin/src/main/resources/application.properties
+++ b/eshop-admin/src/main/resources/application.properties
@@ -11,4 +11,4 @@
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.mvc.hiddenmethod.filter.enabled=true
 #spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-#picture.storage.path=/home/netman/IdeaProjects/eshop/storage
+picture.storage.path=/storage
