--- a/eshop-admin/src/main/resources/bootstrap.properties
+++ b/eshop-admin/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=admin
 spring.profiles.active=user
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://eshop-config-server:8888
