--- a/eshop-config-server/config-repository/admin-user.properties
+++ b/eshop-config-server/config-repository/admin-user.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/admin
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_4
+spring.datasource.url=jdbc:postgresql://db:5432/spring_boot_db_4
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -11,4 +11,3 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-picture.storage.path=/home/netman/IdeaProjects/eshop/storage
