--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,66 +26,66 @@ services:
     ports:
       - 6379:6379
 
-  eshop-eureka:
-    image: registry.heroku.com/eshop-eureka/web:latest
-    ports:
-      - 8761:8761
-    command: bash -c "/apps/wait-for-service.sh db 5432 && /apps/entrypoint.sh"
-
-  eshop-config-server:
-    image: registry.heroku.com/eshop-config-server/web:latest
-    ports:
-      - 8888:8888
-    environment:
-      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
-    command: bash -c "/apps/wait-for-service.sh eshop-eureka 8761 && /apps/entrypoint.sh"
-
-  eshop-gateway:
-    image: registry.heroku.com/eshop-gateway/web:latest
-    ports:
-      - 9090:9090
-    environment:
-      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
-    command: bash -c "/apps/wait-for-service.sh eshop-eureka 8761 && /apps/entrypoint.sh"
-
-  eshop-delivery-service:
-    image: registry.heroku.com/eshop-delivery-service/web:latest
-    ports:
-      - 9091:9091
-    environment:
-      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
-    command: bash -c "/apps/wait-for-service.sh eshop-config-server 8888 && /apps/entrypoint.sh"
-
-  eshop-admin:
-    image: registry.heroku.com/eshop-admin/web:latest
-    ports:
-      - 8081:8081
-    environment:
-      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
-    volumes:
-      - file-storage:/var/storage
-    command: bash -c "/apps/wait-for-service.sh eshop-config-server 8888 && /apps/entrypoint.sh"
-
-  eshop-picture-service:
-    image: registry.heroku.com/picture-service-app/web:latest
-    ports:
-      - 9092:9092
-    environment:
-      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
-    volumes:
-      - file-storage:/var/storage
-    command: bash -c "/apps/wait-for-service.sh eshop-backend-api 9093 && /apps/entrypoint.sh"
-
-  eshop-backend-api:
-    image: registry.heroku.com/eshop-backend-api/web:latest
-    ports:
-      - 9093:9093
-    environment:
-      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
-      spring.redis.host: "redis"
-    command: bash -c "/apps/wait-for-service.sh eshop-delivery-service 9091 && /apps/wait-for-redis.sh redis 6379 &&
-      /apps/entrypoint.sh"
+#  eshop-eureka:
+#    image: registry.heroku.com/eshop-eureka/web:latest
+#    ports:
+#      - 8761:8761
+#    command: bash -c "/apps/wait-for-service.sh db 5432 && /apps/entrypoint.sh"
+#
+#  eshop-config-server:
+#    image: registry.heroku.com/eshop-config-server/web:latest
+#    ports:
+#      - 8888:8888
+#    environment:
+#      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
+#    command: bash -c "/apps/wait-for-service.sh eshop-eureka 8761 && /apps/entrypoint.sh"
+#
+#  eshop-gateway:
+#    image: registry.heroku.com/eshop-gateway/web:latest
+#    ports:
+#      - 9090:9090
+#    environment:
+#      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
+#    command: bash -c "/apps/wait-for-service.sh eshop-eureka 8761 && /apps/entrypoint.sh"
+#
+#  eshop-delivery-service:
+#    image: registry.heroku.com/eshop-delivery-service/web:latest
+#    ports:
+#      - 9091:9091
+#    environment:
+#      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
+#    command: bash -c "/apps/wait-for-service.sh eshop-config-server 8888 && /apps/entrypoint.sh"
+#
+#  eshop-admin:
+#    image: registry.heroku.com/eshop-admin/web:latest
+#    ports:
+#      - 8081:8081
+#    environment:
+#      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
+#    volumes:
+#      - file-storage:/var/storage
+#    command: bash -c "/apps/wait-for-service.sh eshop-config-server 8888 && /apps/entrypoint.sh"
+#
+#  eshop-picture-service:
+#    image: registry.heroku.com/picture-service-app/web:latest
+#    ports:
+#      - 9092:9092
+#    environment:
+#      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
+#    volumes:
+#      - file-storage:/var/storage
+#    command: bash -c "/apps/wait-for-service.sh eshop-backend-api 9093 && /apps/entrypoint.sh"
+#
+#  eshop-backend-api:
+#    image: registry.heroku.com/eshop-backend-api/web:latest
+#    ports:
+#      - 9093:9093
+#    environment:
+#      eureka.client.service-url.defaultZone: "http://eshop-eureka:8761/eureka"
+#      spring.redis.host: "redis"
+#    command: bash -c "/apps/wait-for-service.sh eshop-delivery-service 9091 && /apps/wait-for-redis.sh redis 6379 &&
+#      /apps/entrypoint.sh"
 
 volumes:
   postgres_data_local:
-  file-storage:
+#  file-storage:
