--- a/eshop-config-server/config-repository/admin-dev.properties
+++ b/eshop-config-server/config-repository/admin-dev.properties
@@ -1,5 +1,5 @@
-server.servlet.context-path=/api/v1
-server.port=9092
+server.servlet.context-path=/admin
+server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_4
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
@@ -9,4 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.mvc.hiddenmethod.filter.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+picture.storage.path=/home/netman/IdeaProjects/eshop/storage
