--- a/eshop-config-server/config-repository/backend-docker.properties
+++ b/eshop-config-server/config-repository/backend-docker.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/api/v1
-server.port=9092
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_4
+server.port=9093
+spring.datasource.url=jdbc:postgresql://db:5432/spring_boot_db_4
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.rabbitmq.username=user
+spring.rabbitmq.password=bitnami
