--- a/eshop-config-server/src/main/resources/application.properties
+++ b/eshop-config-server/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8888
 spring.application.name=eshop_config_server
 spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=/apps/config-repository
+spring.cloud.config.server.native.search-locations=/config-repository
+#spring.cloud.config.server.native.search-locations=/apps/config-repository
 #spring.cloud.config.server.git.uri=https://github.com/spring-cloud-samples/config-repo
 #spring.cloud.config.server.git.basedir=config-repository
 #spring.cloud.config.server.git.clone-on-start=true
