--- a/eshop-backend-api/src/main/resources/bootstrap.properties
+++ b/eshop-backend-api/src/main/resources/bootstrap.properties
@@ -1,3 +1,5 @@
 spring.application.name=backend
 spring.profiles.active=dev
-spring.cloud.config.uri=http://eshop-config-server:8888
+#spring.profiles.active=docker
+spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://eshop-config-server:8888
