--- a/eshop-config-server/config-repository/picture-service-app-docker.properties
+++ b/eshop-config-server/config-repository/picture-service-app-docker.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/api/v1
 server.port=9092
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_db_4
+spring.datasource.url=jdbc:postgresql://db:5432/spring_boot_db_4
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
